{
    "name": "PuzzleInput",
    "maps": [
        {
            "name": "PuzzleMove",
            "id": "fd0764ee-bd3d-4a66-85fd-142b141074ac",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "91a10053-0c79-4ba1-bd03-0161b48fa3b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "ec72def4-324a-4e00-be9c-7b5a5086224e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "c98344e6-aab8-411a-9fb8-9c43043dbd12",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "fab90c35-1c08-4aca-ac8c-7c712b084e26",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "cc4bae6d-f812-43ea-97d4-4788abc545b5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b686a47a-e3b4-4758-b508-273e1844e4d9",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}